[gd_scene load_steps=12 format=1]

[ext_resource path="res://scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://scenes/spinner.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/black_ready.png" type="Texture" id=3]
[ext_resource path="res://assets/yellow_ready.png" type="Texture" id=4]
[ext_resource path="res://assets/red_ready.png" type="Texture" id=5]
[ext_resource path="res://scripts/speed_bar.gd" type="Script" id=6]
[ext_resource path="res://assets/font100.fnt" type="BitmapFont" id=7]
[ext_resource path="res://sounds/Skiessi-RandomProjectNumber14253.ogg" type="AudioStream" id=8]

[sub_resource type="StyleBoxFlat" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.478431, 0.478431, 0.478431, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="StyleBoxFlat" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.478431, 0.478431, 0.478431, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="StyleBoxEmpty" id=3]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[node name="Game" type="Node"]

script/script = ExtResource( 1 )

[node name="Spinner2" parent="." instance=ExtResource( 2 )]

transform/pos = Vector2( 360, 244 )
transform/rot = 180.0
transform/scale = Vector2( 1.8, 1.8 )

[node name="Spinner" parent="." instance=ExtResource( 2 )]

transform/pos = Vector2( 360, 1051 )
transform/scale = Vector2( 1.8, 1.8 )

[node name="Control" type="Control" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="Panel" type="Panel" parent="Control"]

rect/min_size = Vector2( 720, 20 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 630.0
margin/right = 720.0
margin/bottom = 670.0
custom_styles/panel = SubResource( 1 )

[node name="Button" type="Button" parent="Control"]

rect/scale = Vector2( 1.5, 1.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 280.0
margin/top = 635.0
margin/right = 382.0
margin/bottom = 655.0
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Reset"
flat = false

[node name="Player2" type="Control" parent="Control"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="BtnBlack" type="TextureButton" parent="Control/Player2"]

rect/rotation = 180.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 720.0
margin/top = 100.0
margin/right = 820.0
margin/bottom = 200.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
params/resize_mode = 1
params/stretch_mode = 0

[node name="BtnYellow" type="TextureButton" parent="Control/Player2"]

rect/rotation = 180.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 720.0
margin/top = 200.0
margin/right = 820.0
margin/bottom = 300.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
params/resize_mode = 1
params/stretch_mode = 0

[node name="BtnRed" type="TextureButton" parent="Control/Player2"]

rect/rotation = 180.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 720.0
margin/top = 300.0
margin/right = 820.0
margin/bottom = 400.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )
params/resize_mode = 1
params/stretch_mode = 0

[node name="Speed" type="ProgressBar" parent="Control/Player2"]

rect/rotation = -90.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 82.0
margin/top = 0.0
margin/right = 732.0
margin/bottom = 82.0
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 50.0
range/exp_edit = false
range/rounded = false
percent/visible = false
script/script = ExtResource( 6 )

[node name="Score" type="Label" parent="Control/Player2"]

rect/rotation = 180.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 719.0
margin/top = 637.0
margin/right = 1438.0
margin/bottom = 744.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.478431, 0.478431, 0.478431, 1 )
text = "0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Msg" type="Label" parent="Control/Player2"]

rect/rotation = 180.0
rect/scale = Vector2( 0.6, 0.6 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 620.0
margin/top = 530.0
margin/right = 1476.0
margin/bottom = 637.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.478431, 0.478431, 0.478431, 1 )
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Player" type="Control" parent="Control"]

editor/display_folded = true
rect/rotation = 180.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 720.0
margin/top = 1280.0
margin/right = 760.0
margin/bottom = 1320.0

[node name="BtnBlack" type="TextureButton" parent="Control/Player"]

rect/rotation = 180.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 720.0
margin/top = 100.0
margin/right = 820.0
margin/bottom = 200.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
params/resize_mode = 1
params/stretch_mode = 0

[node name="BtnYellow" type="TextureButton" parent="Control/Player"]

rect/rotation = 180.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 720.0
margin/top = 200.0
margin/right = 820.0
margin/bottom = 300.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
params/resize_mode = 1
params/stretch_mode = 0

[node name="BtnRed" type="TextureButton" parent="Control/Player"]

rect/rotation = 180.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 720.0
margin/top = 300.0
margin/right = 820.0
margin/bottom = 400.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )
params/resize_mode = 1
params/stretch_mode = 0

[node name="Speed" type="ProgressBar" parent="Control/Player"]

rect/rotation = -90.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 82.0
margin/top = 0.0
margin/right = 712.0
margin/bottom = 82.0
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 50.0
range/exp_edit = false
range/rounded = false
percent/visible = false
script/script = ExtResource( 6 )

[node name="Score" type="Label" parent="Control/Player"]

rect/rotation = 180.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 720.0
margin/top = 620.0
margin/right = 1440.0
margin/bottom = 727.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.478431, 0.478431, 0.478431, 1 )
text = "0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Msg" type="Label" parent="Control/Player"]

rect/rotation = 180.0
rect/scale = Vector2( 0.6, 0.6 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 620.0
margin/top = 520.0
margin/right = 1477.0
margin/bottom = 627.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.478431, 0.478431, 0.478431, 1 )
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="musica" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 8 )
stream/play = true
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = true
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[connection signal="block" from="." to="Spinner" method="_on_Game_block"]

[connection signal="block" from="." to="Spinner2" method="_on_Game_block"]

[connection signal="unblock" from="." to="Spinner" method="_on_Game_unblock"]

[connection signal="unblock" from="." to="Spinner2" method="_on_Game_unblock"]

[connection signal="limit" from="Spinner2" to="." method="_on_Spinner2_limit"]

[connection signal="speed" from="Spinner2" to="Control/Player2/Speed" method="_on_Spinner_speed"]

[connection signal="zero" from="Spinner2" to="." method="_on_Spinner2_zero"]

[connection signal="limit" from="Spinner" to="." method="_on_Spinner_limit"]

[connection signal="speed" from="Spinner" to="Control/Player/Speed" method="_on_Spinner_speed"]

[connection signal="zero" from="Spinner" to="." method="_on_Spinner_zero"]

[connection signal="pressed" from="Control/Button" to="." method="_on_Button_pressed"]

[connection signal="released" from="Control/Button" to="." method="_on_Button_released"]

[connection signal="pressed" from="Control/Player2/BtnBlack" to="Spinner2" method="_on_BtnBlack_pressed"]

[connection signal="pressed" from="Control/Player2/BtnYellow" to="Spinner2" method="_on_BtnYellow_pressed"]

[connection signal="pressed" from="Control/Player2/BtnRed" to="Spinner2" method="_on_BtnRed_pressed"]

[connection signal="pressed" from="Control/Player/BtnBlack" to="Spinner" method="_on_BtnBlack_pressed"]

[connection signal="pressed" from="Control/Player/BtnYellow" to="Spinner" method="_on_BtnYellow_pressed"]

[connection signal="pressed" from="Control/Player/BtnRed" to="Spinner" method="_on_BtnRed_pressed"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


